--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "template",
   "version": "0.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.f.cjs",
   "scripts": {
-    "test": "tsc & node --trace-uncaught ./test.js"
+    "test": "tsc & node --trace-uncaught ./test.f.cjs"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,6 @@
   },
   "homepage": "https://github.com/functionalscript/template#readme",
   "devDependencies": {
-    "typescript": "^4.5.5"
+    "typescript": "^4.7.4"
   }
 }
